# STAT-4830-NAPPERS-project

./: .gitignore  Kalshi_Data  README.md  agogit log --since=2 weeks ago --date=iso  coding.ipynb  polymarket_exploration.ipynb  pyproject.toml
Outputs/polymarket_mispricing/: summary.json  summary.txt  trades.csv  weights.csv
Outputs/polymarket_mispricing_60d/: metrics_by_fold.json  pnl_by_fold.csv  summary.json  summary.txt  trades.csv  weights.csv
Outputs/polymarket_mispricing_60d_multip/: metrics_by_fold.json  pnl_by_fold.csv  pnl_plot.py  summary.json  summary.txt  trades.csv
Outputs/polymarket_mispricing_test/: metrics_by_fold.json  pnl_by_fold.csv
Outputs/polymarket_panel_experiments/: master_report.md
data/other/: .gitkeep
data/prediction_market/: polymarket_markets_rich.csv
docs/: NAPPERS_Week_5_Assignment_Slides (1).pptx  Prompts  development_log.md
notebooks/: March_23_STAT4830.ipynb  March_26_STAT4830 (1).ipynb  March_26_STAT4830.ipynb  STAT4830_HW1 (3).ipynb  STAT4830_HW1.ipynb  Week 10 (Mar 20): Code.ipynb  Week 10c (Mar 27): Code.ipynb  Week 12a (Apr 10): Code.ipynb  Week 12b (Apr 10): Code.ipynb  Week 2 (Jan 22): Code.ipynb  Week 2 (Jan 23): Code.ipynb  Week 6 (Feb 20): Code.ipynb  notebook.ipynb  week3_implementation.ipynb  week6_implementation.ipynb
other/: polymarket_exploration_60plus.ipynb  polymarket_time_data.py
scripts/: run_panel_experiments.py  run_polymarket_mispricing.py
src/: data_loader.py  features.py
src/polymarket/: io.py  (+9 more)
supplementary class setup material/: .gitignore  pyproject.toml
tests/: test_basic.py
(+30 files in other folders)
